--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ kotlinxSerialization = "1.7.3"
 datastore = "1.1.1"
 accompanist = "0.36.0"
 mockk = "1.13.9"
+palette = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -64,6 +65,9 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 
 # Accompanist
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
+
+# Palette
+androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
 
 # Testing
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
