--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ datastore = "1.1.1"
 accompanist = "0.36.0"
 mockk = "1.13.9"
 palette = "1.0.0"
+exifinterface = "1.3.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,6 +69,9 @@ accompanist-permissions = { group = "com.google.accompanist", name = "accompanis
 
 # Palette
 androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
+
+# ExifInterface
+androidx-exifinterface = { group = "androidx.exifinterface", name = "exifinterface", version.ref = "exifinterface" }
 
 # Testing
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
